fixed unwanted horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -314,11 +314,21 @@ nav {
   .contact-info a{
     text-decoration: none;
     color: black;
-
   }
   .contact-info a:hover{
     cursor: pointer;
   }
+
+  iframe {
+    width: 300px;
+  }
+
+
+@media screen and (min-width: 600px) {
+  iframe {
+    width: 500px;
+  }
+}
 
 @media screen and (min-width: 770px) {
   nav {
@@ -348,4 +358,5 @@ nav {
     background-repeat: no-repeat;
     background-size: cover;
   }
+
 }
